create github pages

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="header4 cid-rqDnp1LDDF mbr-parallax-background" id="header4-5">
+<section class="engine"><a href="https://mobirise.info/c">website builder</a></section><section class="header4 cid-rqDnp1LDDF mbr-parallax-background" id="header4-5">
 
     
 
@@ -106,7 +106,7 @@
     <div class="container">
         <div class="row justify-content-center content-row">
             <div class="media-container-column title col-12 col-lg-7 col-md-6">
-                <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-5">&nbsp; عدم وجود مدير مشروع تقني من أحد الإسباب الرئيسية في فشل المشاريع التقنية والتي تتجاوز نسبتها</h3>
+                <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-5">&nbsp; عدم وجود مدير مشروع تقني من الإسباب الرئيسية في فشل المشاريع التقنية والتي تتجاوز نسبتها</h3>
                 <h2 class="align-left mbr-bold mbr-fonts-style display-1">70%</h2>
             </div>
             <div class="media-container-column col-12 col-lg-3 col-md-4">
@@ -206,7 +206,7 @@
             <div class="row timeline-element reverse separline">
                  <div class="timeline-date-panel col-xs-12 col-md-6  align-left">         
                     <div class="time-line-date-content">
-                        <p class="mbr-timeline-date mbr-fonts-style display-5">المرحلة الأولى</p>
+                        <p class="mbr-timeline-date mbr-fonts-style display-5"><strong>المرحلة الأولى</strong></p>
                     </div>
                 </div>
            <span class="iconBackground"></span>
@@ -221,8 +221,8 @@
             <div class="row timeline-element  separline">
                 <div class="timeline-date-panel col-xs-12 col-md-6 align-right">
                     <div class="time-line-date-content">
-                        <p class="mbr-timeline-date mbr-fonts-style display-5">
-                            المرحلة الثانية</p>
+                        <p class="mbr-timeline-date mbr-fonts-style display-5"><strong>
+                            المرحلة الثانية</strong></p>
                     </div>
                 </div>
                 <span class="iconBackground"></span>
@@ -241,8 +241,8 @@
             <div class="row timeline-element reverse separline">
                 <div class="timeline-date-panel col-xs-12 col-md-6  align-left">
                     <div class="time-line-date-content">
-                        <p class="mbr-timeline-date mbr-fonts-style display-5">
-                            المرحلة الثالثة</p>
+                        <p class="mbr-timeline-date mbr-fonts-style display-5"><strong>
+                            المرحلة الثالثة</strong></p>
                     </div>
                 </div>
                 <span class="iconBackground"></span>
@@ -261,8 +261,8 @@
             <div class="row timeline-element  separline">
                 <div class="timeline-date-panel col-xs-12 col-md-6 align-right">
                     <div class="time-line-date-content">
-                        <p class="mbr-timeline-date mbr-fonts-style display-5">
-                            المرحلة الرابعة</p>
+                        <p class="mbr-timeline-date mbr-fonts-style display-5"><strong>
+                            المرحلة الرابعة</strong></p>
                     </div>
                 </div>
                 <span class="iconBackground"></span>
@@ -281,8 +281,8 @@
             <div class="row timeline-element reverse separline">
                 <div class="timeline-date-panel col-xs-12 col-md-6  align-left">
                     <div class="time-line-date-content">
-                        <p class="mbr-timeline-date mbr-fonts-style display-5">
-                            المرحلة الخامسة</p>
+                        <p class="mbr-timeline-date mbr-fonts-style display-5"><strong>
+                            المرحلة الخامسة</strong></p>
                     </div>
                 </div>
                 <span class="iconBackground"></span>
@@ -301,8 +301,8 @@
             <div class="row timeline-element">
                 <div class="timeline-date-panel col-xs-12 col-md-6 align-right">
                     <div class="time-line-date-content">
-                       <p class="mbr-timeline-date mbr-fonts-style display-5">
-                            المرحلة السادسة</p>
+                       <p class="mbr-timeline-date mbr-fonts-style display-5"><strong>
+                            المرحلة السادسة</strong></p>
                     </div>
                 </div>
                 <span class="iconBackground"></span>
@@ -469,7 +469,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6FpOd4d6ha7pMPyfAkzsnrLTSDp5SLu3YPiU8VMX7hvfDY1AfJr3tOnu7n9BMv+HEbt3g96x4WV1LGWhpSN0HybhzOPwNZM22Fplx0bjiiLVqcGcAaegD6KSTzwqSu8R">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="uwniudM2CkdznL4/x26pF+wjwyWeRcS2AGO0MVz8nLMlDw5A5kA8PfS0kPIQ/G4E1bTSMM4CJYWylLrhdIPVTOvvUoWJhX9fn6fsQaqZXJbVhTn1l6cqKJqmOx+vx/Ht">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">شكرا وسيتم الرد لاحقا</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
