create github pages

--- a/index.html
+++ b/index.html
@@ -26,6 +26,21 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-136117515-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-136117515-2');
+</script>
+
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-rqDmUsacME" once="menu" id="menu1-4">
 
     
@@ -73,7 +88,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">website builder</a></section><section class="header4 cid-rqDnp1LDDF mbr-parallax-background" id="header4-5">
+<section class="engine"><a href="https://mobirise.info/f">easy website builder</a></section><section class="header4 cid-rqDnp1LDDF mbr-parallax-background" id="header4-5">
 
     
 
@@ -213,7 +228,7 @@
             <div class="col-xs-12 col-md-6 align-right">
                 <div class="timeline-text-content">
                     <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">البداية</h4>
-                    <p class="mbr-timeline-text mbr-fonts-style display-7">بعد إستلامنا نموذج طلب تحليل الفكرة سمقوم بتحليل الفكرة تقنيا وتجاريا وبعد ذلك نرسلها للعميل كميثاق لفكرة المشروع</p>
+                    <p class="mbr-timeline-text mbr-fonts-style display-7">بعد إستلامنا نموذج طلب تحليل الفكرة سنقوم بتحليل الفكرة تقنيا وتجاريا وبعد ذلك نرسلها للعميل كميثاق لفكرة المشروع</p>
                  </div>
             </div>
             </div>
@@ -232,7 +247,7 @@
                             التخطيط
                         </h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            في هذه المرحلة سنقوم في إنشاء عدة نماذج كنموذج العمل التجاري وتحليل سوات ونموذج البوصلة وقصص المستخدم
+                            في هذه المرحلة سنقوم في إنشاء عدة نماذج مثل نموذج العمل التجاري وتحليل سوات ونموذج البوصلة وقصص المستخدم
                         </p>
                     </div>
                 </div>
@@ -469,7 +484,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="uwniudM2CkdznL4/x26pF+wjwyWeRcS2AGO0MVz8nLMlDw5A5kA8PfS0kPIQ/G4E1bTSMM4CJYWylLrhdIPVTOvvUoWJhX9fn6fsQaqZXJbVhTn1l6cqKJqmOx+vx/Ht">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="eY/mWJacBPCLGSTd9ok07kktvTTtD21B5WRnI+OgKHA1Z8FaVxIvSXYT7Ry/GhMH6UEhyShxR0+46SXhaQOI298Kl5XmHq3pyFV3Alvi1rMM+cUveY6COibU1QXdIxPV">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">شكرا وسيتم الرد لاحقا</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
