--- a/page2.html
+++ b/page2.html
@@ -24,6 +24,21 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-136117515-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-136117515-2');
+</script>
+
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-rqDmUsacME" once="menu" id="menu1-i">
 
     
@@ -71,7 +86,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">website maker</a></section><section class="mbr-section form1 cid-rqMmyLldeY" id="form1-j">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="mbr-section form1 cid-rqMmyLldeY" id="form1-j">
 
     
 
@@ -88,7 +103,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="v2JpnGFQomxbl39finleRMVVg5qWKCNEfIuXhDpGj0jsRqanheWrd5B2EXc1fcsNbpCakRmT7PPTcVWyp1IpuWd5pCB8Z+Wvvzq7m8PS3ftYEISLPSbffTVjXLCWApET">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="yFI86Naamc/TJp85wKTCaFMUuzeTnIrhwF5fObVPlxWyYqfTkZtDK9qt4EO92D8cfPRBHnwcsSj0B/mwl/ORRQ/Tanc8hcLVdmbgiBI8mRWeTJ6IHNxvCoKXXTbaQIfI">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
