create github pages

--- a/page1.html
+++ b/page1.html
@@ -87,7 +87,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">web creation software</a></section><section class="mbr-section article content10 cid-rqENyAa1pR" id="content10-c">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section article content10 cid-rqENyAa1pR" id="content10-c">
     
      
 
@@ -151,7 +151,7 @@
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="z3dkr7dNctXudVAmienoIyje8RpVTh6j9aF2Ta2wi2hJ9PlXEA2MFhSM3zN0Xr+Ru7q9CKgvksrvZo71GaHJaBNshdRWJlFVdzaLKsbw2hTA/+BHQeOxktPCh0aMxkcQ">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="SjyB2791CzpxzPMUbLO3fmIkIcrWrvDo2sSFiAdDSzi3T8JNrXeHft0zzsxtF5rpwMKFIfx3sHJ2VY+3StyzZXQMEuaMRb8VD7j4CQ0j0AsPz+IXJ+q4c1Lzw0tKWgkS">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
