--- a/page2.html
+++ b/page2.html
@@ -86,7 +86,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="mbr-section form1 cid-rqMmyLldeY" id="form1-j">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="mbr-section form1 cid-rqMmyLldeY" id="form1-j">
 
     
 
@@ -103,7 +103,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="yFI86Naamc/TJp85wKTCaFMUuzeTnIrhwF5fObVPlxWyYqfTkZtDK9qt4EO92D8cfPRBHnwcsSj0B/mwl/ORRQ/Tanc8hcLVdmbgiBI8mRWeTJ6IHNxvCoKXXTbaQIfI">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="1oMEei5rWfOB75aUgCvsjzeOPO+YwWKURbfndNMFgBi/UdfPdp2EXIEH/yPZFlSPprlBEv08y3U2hA5U7oNx4cFJHNpsCyV6Af6nl1tj0ZSE3uopd41FXSYVkqfu/jqz">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
