--- a/page1.html
+++ b/page1.html
@@ -87,7 +87,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="mbr-section article content10 cid-rqENyAa1pR" id="content10-c">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="mbr-section article content10 cid-rqENyAa1pR" id="content10-c">
     
      
 
@@ -151,7 +151,7 @@
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Q12MLGWKe5BYerSlM3uET0rsfl+zgGOkwlvOG6Q8cl2qVRnBaJ00N8oM6C5lwHNRzSvv74nnSB8HZH1eW1R/KCn294LnP2DJiCTVqdfl1ROFc21Dg3WS2WozYSijZ1jB">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VyyDsIbe/0fp1ORojdI6oRrJCHWewbkucIy6LdCjn4naBGfqm5pJZ2+sg/V+j0QTmo5nRcY+EQgDMR+brfqobyZVbre4PvgXnk+8NT4bJZayKrA6MZOouSYn3PnXfDTZ">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
