create github pages

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header4 cid-rqDnp1LDDF mbr-parallax-background" id="header4-5">
+<section class="engine"><a href="https://mobirise.info/d">web maker</a></section><section class="header4 cid-rqDnp1LDDF mbr-parallax-background" id="header4-5">
 
     
 
@@ -121,7 +121,7 @@
     <div class="container">
         <div class="row justify-content-center content-row">
             <div class="media-container-column title col-12 col-lg-7 col-md-6">
-                <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-5">&nbsp; عدم وجود مدير مشروع تقني من الإسباب الرئيسية في فشل المشاريع التقنية والتي تتجاوز نسبتها</h3>
+                <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-5">&nbsp; عدم وجود مدير مشروع تقني سبب رئيسي في فشل المشاريع التقنية والتي تتجاوز نسبتها</h3>
                 <h2 class="align-left mbr-bold mbr-fonts-style display-1">70%</h2>
             </div>
             <div class="media-container-column col-12 col-lg-3 col-md-4">
@@ -213,7 +213,7 @@
     <div class="container">
         <div class="inner-container" style="width: 100%;">
             <hr class="line" style="width: 25%;">
-            <div class="section-text align-center mbr-white mbr-fonts-style display-5">من أكبر الأخطاء التي يقع بها الغير تقني ويقرر أن يصمم موقع أو تطبيق أو أي مشروع تقني هو إتفاقة مع مبرمج لغرض توفير المال وهو في الأساس يخسر أكثر لإن المبرمج لايفهم ماذا يريد &nbsp;وبالتالي يضع إضافات كثيرة لايحتاجها مشروعة ولهذا يحتاج إلى شريك تقني أو مدير مشروع</div>
+            <div class="section-text align-center mbr-white mbr-fonts-style display-5">إذا كنت غير تقني ينصح بعدم التعاقد مع مبرمج والتعاقد مع مدير مشروع أو شريك تقني تفاديا للخسائر مستقبلا</div>
             <hr class="line" style="width: 25%;">
         </div>
     </div>
@@ -368,7 +368,7 @@
     <div class="container">
         <div class="inner-container" style="width: 99%;">
             <hr class="line" style="width: 25%;">
-            <div class="section-text align-center mbr-white mbr-fonts-style display-5">نحن مع العميل من أول مرحلة إلى آخر مرحلة وإذا رغب العميل في الإنسحاب من المشروع فيستطيع الإنسحاب قبل بداية المرحلة القادمة. وكذلك الدفع يكون كل مرحلة لوحدها مما يسهل للعميل عمليات الدفع. نبحث عن الأسهل والأفضل لعملائنا&nbsp;</div>
+            <div class="section-text align-center mbr-white mbr-fonts-style display-5">للعميل الحق في إختيار مراحل المشروع التي تناسبة والتوقف قبل بداية المرحلة التالية وكذلك الدفع مع كل مرحلة من مراحل المشروع&nbsp;</div>
             <hr class="line" style="width: 25%;">
         </div>
     </div>
@@ -410,7 +410,7 @@
 
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-img pb-3">
-                    <span class="mbr-iconfont mbri-touch" style="color: rgb(241, 115, 0); fill: rgb(241, 115, 0);"></span>
+                    <span class="mbr-iconfont mbri-mobile" style="color: rgb(241, 115, 0); fill: rgb(241, 115, 0);"></span>
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-5">تطبيقات الجوال</h4>
@@ -499,7 +499,7 @@
     <div class="container">
         <div class="inner-container" style="width: 100%;">
             <hr class="line" style="width: 25%;">
-            <div class="section-text align-center mbr-white mbr-fonts-style display-5">هدفنا الرئيسي هو خدمة عملاؤنا في الحصول على مايتطلعون عليه ونعتبر العميل شريكنا ونسعد &nbsp;في إستقبال الملاحظات والتي توفر له خدمة أفضل من نواحي الجودة والسعر والسرعة&nbsp;</div>
+            <div class="section-text align-center mbr-white mbr-fonts-style display-5">هدفنا الرئيسي هو خدمة عملاؤنا في الحصول على مايتطلعون عليه ونعتبر العميل شريكنا ونسعد &nbsp;في إستقبال رسائلكم على النموذج التالي</div>
             <hr class="line" style="width: 25%;">
         </div>
     </div>
@@ -523,7 +523,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="MBa2yOgoSU//z/W5H7q/mco2ETR1seYiOO7X9CRwNcC4k//o8Y3Pvbn9wO1OCueH4rltMPUz2HrCYM5zfXhCVbSFqSpnM5Wa5/hiZ6tW9DrrhE9JHG4NNHbgxY9b0GH2">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="fnNcJRwIfajO2Szr6cEjTLuFE/L6T2U4MQQ4jK3+F/PpqyaIvr0oVzRYDMVt8Qah5jxeVDrRZ4HSwUpozyp2KlPvudz6c9TptoHgdgQZDsz5rG6SBHQ1N4ILvDxOOdcT">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">شكرا وسيتم الرد لاحقا</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
