create github pages

--- a/page2.html
+++ b/page2.html
@@ -86,7 +86,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="mbr-section form1 cid-rqMmyLldeY" id="form1-j">
+<section class="engine"><a href="https://mobirise.info/g">how to build a site</a></section><section class="mbr-section form1 cid-rqMmyLldeY" id="form1-j">
 
     
 
@@ -103,7 +103,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="qlUBbJsWUFKjTjwqW0wRbTntCIWw+Izdrf00oJJLLeUtFmoKOKW0awSdDBZ0NFnuSZIRwQNdgVo+gpSChfIPAdHFGULhXACCKCUHUyahil3elTu0QbFzYLTQAJbedebf">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="nmUZLticCnw8RB9tW8TZ2uaGVuHwUscZiNFKRVAZpg0IG4osExmsVs9kx8gQkxSu4xJklTEZieRtwHAo0TiNcCXqofNz3Ftexl0qyfAsx1m6/UWUhnJI8qk3UBGmpduW">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
