create github pages

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">create your own website for free</a></section><section class="header4 cid-rqDnp1LDDF mbr-parallax-background" id="header4-5">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="header4 cid-rqDnp1LDDF mbr-parallax-background" id="header4-5">
 
     
 
@@ -225,7 +225,7 @@
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
                 <h2 class="align-center pb-3 mbr-fonts-style display-2">MVP<br>منتج نموذج أولي</h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">بناء المنتج بأسلوب يسمح لنا بفهم متطلبات السوق وصلاحية المنتج، في أسرع وقت وأقل جهد وتكلفة . حيث يسمح هذا الأسلوب في دخول السوق بسرعة والاحتكاك مع العملاء مبكرا لفهم متطلباتهم وتكييف المنتج ليتناسب مع تلك المتطلبات، أو الاكتشاف بسرعة أن المنتج لا يحقق أي فائدة للعميل المستهدف، فيتم استبدال المنتج أو تعديله لاستهداف شريحة أخرى من السوق، بسرعة وقبل خسارة الكثير من الموارد</h3>
+                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">بناء نموذج أولي للمشروع لفهم متطلبات السوق ومدى نجاح المشروع في أسرع وقت وأقل جهد وتملفة ويساهم ذلك بسرعة دخول السوق والإحتكاك مع العملاء مبكرا لفهم متطلباتهم وتحقيقها وأيضا تفادي هدر موارد المشروع</h3>
                 
             </div>
         </div>
@@ -409,8 +409,7 @@
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-5">متاجر إلكترونية</h4>
-                    <p class="mbr-text mbr-fonts-style display-7">متاجر إلكترونية مناسبة للمبتدئين بالتجارة الإلكترونية وأسعار في متناول الجميع
-<br></p>
+                    <p class="mbr-text mbr-fonts-style display-7">بناء متجر إلكتروني على منصة اوبن كارت شامل الاستضافة والدومين وبتكلفة إقتصادية واضافة مميزات بناء على طلب العميل<br></p>
                 </div>
             </div>
 
@@ -421,8 +420,7 @@
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-5">تطبيقات الجوال</h4>
                     <p class="mbr-text mbr-fonts-style display-4">
-                        تطبيقات ايفون وأندرويد أصلية وكذلك تتطبيقات ويب وتطبيقات هجينة يتم الإخنيار منها حسب متطلبات المشروع
-                    </p>
+                        تطبيقات ايفون وأندرويد أصلية وكذلك تطبيقات ويب وتطبيقات هجينة يتم الإخنيار منها حسب متطلبات المشروع والعميل</p>
                 </div>
             </div>
 
@@ -433,8 +431,7 @@
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-5">مواقع ويب</h4>
                     <p class="mbr-text mbr-fonts-style display-7">
-                        تصميم مواقع ويب للشركات والمؤسسات وكذلك مدونات شخصية ومواقع شخصية
-                    </p>
+                        تصميم مواقع ويب للشركات والمؤسسات وكذلك مدونات على بلوجر وورد بريس ومواقع أو مدونات شخصية&nbsp;</p>
                 </div>
             </div>
 
@@ -529,7 +526,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="PJQ01e3WNT4K13t7YD7RoJyu9kQ2DYET7pnrhzI65OsltTcziRFF62QHjaBajxp+rMLsQgJ7WZtc4OY3bg77kM1tzwrXzxmL4x+dH1unBV0aszx1CH6a9myIzC49qvdy">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="mfcUSPoc7A1sHO5w9IQt+pFl0mrZMRZhd96Lq+8KgiLabSCEZG6FdOZFcg+j+zv6Uf20+roiU+m1YJUsFwETbiUbaqa4NttgqwUCwAo05pXLnBC/IknB1C8DqFHkCMu9">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">شكرا وسيتم الرد لاحقا</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
