create github pages

--- a/page2.html
+++ b/page2.html
@@ -86,7 +86,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="mbr-section form1 cid-rqMmyLldeY" id="form1-j">
+<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section class="mbr-section form1 cid-rqMmyLldeY" id="form1-j">
 
     
 
@@ -103,7 +103,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="3XpZuA0qliXu77lHAuqldErrCY70jkq/HMoAX3xxHz7aLqAd+VR4lDWLe/muZ3GUKL/0OgAMegJzJYzAwPTyYEMsnTsYARwXNIr7lHObXghP0KvV/yEKomSezozqVmSZ">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Zgba8vs+UOk1onegU8O0uvVUMgzcH5QfLfmaWxXXptYZM5xiW21Ru9M9IMKy1AXR4UR0T6TRlMLENdutqpKQz6RPP/3qmG4t3910sRKgXVY+wox+nnRfP5WQYTc/zlfU">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
