--- a/page3.html
+++ b/page3.html
@@ -43,7 +43,7 @@
 
     
 
-    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top collapsed bg-color transparent">
+    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top collapsed">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <div class="hamburger">
                 <span></span>
@@ -86,7 +86,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make a site</a></section><section class="services3 cid-rrDBTrALW9" id="services3-1l">
+<section class="engine"><a href="https://mobirise.info/k">how to develop own website</a></section><section class="services3 cid-rrDBTrALW9" id="services3-1l">
     <!---->
     
     <!---->
