--- a/page1.html
+++ b/page1.html
@@ -87,7 +87,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="mbr-section article content10 cid-rqENyAa1pR" id="content10-c">
+<section class="engine"><a href="https://mobirise.info/b">how to create your own website</a></section><section class="mbr-section article content10 cid-rqENyAa1pR" id="content10-c">
     
      
 
@@ -151,7 +151,7 @@
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="278sW2lnkoic24L6NRwrblZvIzVtAfkYsBHGRtcuxDvWoBfxyLmk/7qry4rsmiAWCJNF52e/cHztdSFwwNjEZ5xPXPqx0AQ8yfyvcFKMZW4RSwonBE0qfozN/liYE7nZ">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="G7O97hkKzJLWVJH7vbWsB7QQyZf9zmQt44JqUCApzkRZIxg61KXO07eYeuLMp4VNg1raGXowKiClZjL3T6/cnu30K0qiw1/L2iPTa0qqk/rOS9cbD9epcY0Zf8/Pb8d3">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
